# bank-ledger

./: Makefile  README.md  pyproject.toml  requirements.txt
scripts/: smoke_test.py
src/bank_ledger/: __init__.py  __main__.py  account.py  errors.py  gui.py  ledger.py  transaction.py
